gen/python-flask-server: api changes from commit 72ee7cf
Clean up, Remove ArgVector, Simplify UniObject, Fix descs.
