# gen/servers/python-flask-server/swagger_server/models/__init__.py
@@ -3,7 +3,6 @@
 from __future__ import absolute_import
 # import models into model package
 from .api_response import ApiResponse
-from .arg_vector import ArgVector
 from .device import Device
 from .event import Event
 from .patch_document import PatchDocument
