# gen/servers/python-flask-server/swagger_server/swagger/swagger.yaml
@@ -31,10 +31,6 @@ paths:
       - "object"
       summary: "Call a function/method."
       operationId: "call_fn"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
       parameters:
       - name: "objId"
         in: "path"
@@ -48,27 +44,23 @@ paths:
         required: true
         type: "string"
       - in: "body"
-        name: "argv"
+        name: "args"
         description: "Parameters/Arguments"
-        required: true
+        required: false
         schema:
-          $ref: "#/definitions/ArgVector"
+          type: "string"
       responses:
         200:
           description: "Success"
           schema:
-            type: "integer"
-            format: "int64"
+            $ref: "#/definitions/ApiResponse"
       x-swagger-router-controller: "swagger_server.controllers.object_controller"
   /state/{objId}/reg/{index}:
     get:
       tags:
       - "object"
       summary: "Get the value of a register"
-      description: "Returns a single event"
       operationId: "get_reg"
-      produces:
-      - "application/json"
       parameters:
       - name: "objId"
         in: "path"
@@ -89,7 +81,7 @@ paths:
             type: "integer"
             format: "int64"
         400:
-          description: "Invalid ID supplied"
+          description: "Invalid ID/Index supplied"
         404:
           description: "Not found"
       x-swagger-router-controller: "swagger_server.controllers.object_controller"
@@ -99,8 +91,6 @@ paths:
       - "object"
       summary: "Get the state of the object."
       operationId: "get_state"
-      produces:
-      - "application/json"
       parameters:
       - name: "objId"
         in: "path"
@@ -118,7 +108,7 @@ paths:
     patch:
       tags:
       - "object"
-      summary: "Add a new event"
+      summary: "Partially modify the state of an object"
       operationId: "patch_state"
       parameters:
       - name: "objId"
@@ -143,10 +133,6 @@ paths:
       - "event"
       summary: "Add a new event"
       operationId: "add_event"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
       parameters:
       - in: "body"
         name: "body"
@@ -185,8 +171,6 @@ paths:
       summary: "Find event by ID"
       description: "Returns a single event"
       operationId: "get_event_by_id"
-      produces:
-      - "application/json"
       parameters:
       - name: "eventId"
         in: "path"
@@ -207,6 +191,8 @@ paths:
 definitions:
   ApiResponse:
     type: "object"
+    required:
+    - "code"
     properties:
       code:
         type: "integer"
@@ -214,12 +200,13 @@ definitions:
       message:
         type: "string"
         example: "everything is ok"
-  ArgVector:
-    type: "array"
-    items:
-      type: "string"
+    example:
+      code: 0
+      message: "everything is ok"
   Device:
     type: "object"
+    required:
+    - "name"
     properties:
       name:
         type: "string"
@@ -229,6 +216,9 @@ definitions:
           $ref: "#/definitions/UniversalObject"
   Event:
     type: "object"
+    required:
+    - "name"
+    - "published_at"
     properties:
       id:
         type: "integer"
@@ -258,11 +248,15 @@ definitions:
       uuid:
         type: "string"
         format: "uuid"
-      path:
+      type:
         type: "string"
+      id:
+        type: "integer"
+        format: "int32"
     example:
       uuid: "0729a580-2240-11e6-9eb5-0002a5d5c51b"
-      path: "#/led/0"
+      type: "led"
+      id: "1"
   PatchRequest:
     type: "array"
     items:
@@ -324,7 +318,7 @@ definitions:
         format: "date-time"
       hash:
         type: "integer"
-        format: "int32"
+        format: "int64"
         description: "Hash computed from the state."
   Tag:
     type: "object"
